2006-01-10  Per Bothner  <per@bothner.com>

	* URI_utils.java (FiletoURL, toURL): New methods.
	(FiletoURI): Use fileToURL.

2006-01-07  Per Bothner  <per@bothner.com>

	* URI_utils.java (makeClassResourceURI): New method.
	(resourceURL): Largely rewrite for modified "class-resource:/"
	uri-scheme handling.
	(CLASS_RESOURCE_URI_SCHEME): Rename to CLASS_RESOURCE_URI_PREFIX
	and add '/'.
	(CLASS_RESOURCE_URI_SCHEME_LENGTH): Likewise increment and
	rename to CLASS_RESOURCE_URI_PREFIX_LENGTH.
	(resolve): Give more precise return type.

2006-01-04  Per Bothner  <per@bothner.com>

	* URI_utils.java (isAbsolute, resourceURL, toFileOrURL,
	getInputStream, getOutputStream, nametoURI, FiletoURI, resolve,
	getClassLoaderForURI, setClassLoaderForURI): New static methods.
	(CLASS_RESOURCE_URI_SCHEME, CLASS_RESOURCE_URI_SCHEME_LENGTH):
	New constants.
	(toURI):: Changes to use new methods.
	* LineBufferedReader.java (name): Generalize name field to Object.
	(getName, setName): Change to match.
	(getURI): New method.

2006-01-02  Per Bothner  <per@bothner.com>

	* URI_utils.java: Moved from gnu.kawa.functions.
	* Makefile.am: Update accordingly.

2005-12-21  Per Bothner  <per@bothner.com>

	* WriterManager.java (register): Add one to return value, so it is
	always positive, hence we can use zero to mean 'not registered'.
	(unregister): If index is 0, ignore it.  Otherwise, subtract one.

2005-12-10  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (skipRestOfLine): New method.

2005-09-07  Per Bothner  <per@bothner.com>

	* SourceError.java (totring): Check that line is non-zero.

2005-07-21  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (lineLengthLoc, miserWidthLoc, indentLoc):
	New fields contains fluids for controlling output.
	(startLogicalBlock): If queue is empty, check width etc.
	(getMiserWidth): Use parameter instead of hard-wired.

2005-05-17  Per Bothner  <per@bothner.com>

	* SourceError.java (message): Can contain muliple lines.